--- a/index.css
+++ b/index.css
@@ -11,7 +11,9 @@ display: flex;
 height: 70vh;
 align-items: center;
 justify-content: center;
-background-image: url("logoBig.png");
+background-image: url("./backgrounds/landing.jpg");
+background-position: center 100%;
+background-size: cover;
 }
 .logo{
     
