--- a/index.css
+++ b/index.css
@@ -198,6 +198,12 @@
         padding: 0 25px;
     }
     
+    .about {
+        border-right: none;
+        padding: 0 20px;
+        align-content: center;
+    }
+    
     .fa {
         color: #f15A29;
     }
